# QBot

./: .gitignore  CMakeLists.txt
Doki/: .directory  Cały repertuar - aktualizacja 25.08.2019.docx  Praca (fv).docx  Repertuar 2019.xlsx  Wesele.ods
scripts/: oldPlotScore.py  plotScore.py  quitAfterTime.sh  scoreGraph.m
src/: Flags.h  TestFunctions.h  main.cpp  testFunctions.h
src/ActionCritic/: ActionCritic.cpp  ActionCritic.h
src/ActorCritic/: ActorCritic.cpp  ActorCritic.h
src/Analyzers/: DesktopHandler.cpp  DesktopHandler.h  ImageAnalyzer.cpp  ImageAnalyzer.h  MemoryAnalyzer.cpp  MemoryAnalyzer.h  StateAnalyzer.cpp  StateAnalyzer.h
src/Arrays/: Array.cpp  Array.h  HashMapArray.cpp  HashMapArray.h  HybridArray.cpp  HybridArray.h  NeuralNetworkArray.cpp  NeuralNetworkArray.h  Table.cpp  Table.h
src/Bot/: .Bot.cpp.swp  Bot.cpp  Bot.h  Common.h  Controller.h  State.h
src/Game/: Control.h  Game.cpp  Game.h  Point.h
src/HashMap/: HashMap.cpp  HashMap.h  QValues.cpp  QValues.h
src/ImageAnalyzer/: DesktopHandler.cpp  ImageAnalyzer.cpp  ImageAnalyzer.h
src/Loggers/: DataDrawer.cpp  DataDrawer.h  LogFileHandler.h  ParameterFIleHandler.h
src/NeuralNetwork/: ConvolutionalNeuralNetwork.cpp  ConvolutionalNeuralNetwork.h  InputNeuron.cpp  InputNeuron.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
src/NeuralNetworkGPU/: NeuralNetwork.cpp  NeuralNetwork.h
src/QLearning/: QLearning.cpp  QLearning.h
src/ReinforcementLearning/: ActorCritic.cpp  ActorCritic.h  ActorCriticNN.cpp  ActorCriticNN.h  GeneralizedQL.cpp  GeneralizedQL.h  QLearning.cpp  (+3 more)
(+44 files in other folders)
